app/assets/stylesheets/global.css.scss
html,body,h1{
margin:0;
}

#bar{
  background-color:#111;
  opacity: 0.7;
  width:100%;
  
}
#main-title{
font-family: 'Montserrat', 'Arial', 'sans-serif';
font-weight: bold;
text-transform: uppercase;
color:snow;
margin-bottom:55px;
margin-top: 0px;
padding: 0px;
padding-left: 5px;
text-align:center;
}
video#bgvid {
position: fixed;
min-width: 100%;
min-height: 100%;
z-index: -100;
background: url(clouds.jpg) no-repeat;
background-size: cover;
overflow:hidden;
opacity:0.6;
}

